Update home page and resolve layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -366,9 +366,9 @@ footer {
     background-image: url('../images/home/berkeley.jpg');
     background-size: cover; 
     background-position: center;
-    width: 100vw;
+    width: 100%;
 
-    height: 800px;
+    padding: 0 0 80px;
 }
 
 .home-page .home-s4-title {
@@ -395,17 +395,18 @@ footer {
 .home-page .home-s4-info-item {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     text-align: center;
     background: rgba(255, 255, 255, .8);
-
+    
     width: 25vw;
-    height: 550px;
+    padding: 0 0 1rem;
 }
 
 .home-page .home-s4-info-item img {
+    margin-top: 2.5vw;
     width: 20vw;
 }
 
